# hs2driver

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GUIDE.md  HS2Client.cpp  HS2Client.hpp  HS2ClientImpl.cpp  IDecompressor.hpp  QuerySubmitter.cpp  README.md  SimpleDecompressor.cpp  compressorInfo.json  compressorInfo.json.sample  docker-build  docker-compose.yml  utils.cpp  utils.hpp
TCLIServiceClient/: TCLIService.cpp  TCLIService.h  TCLIService_types.cpp  TCLIService_types.h
client/: CMakeLists.txt  HS2Client.cpp  TCLIService_constants.cpp  TCLIService_constants.h  TCLIService_types.cpp  utils.cpp
decompressor/: CMakeLists.txt  Decompressor.cpp  IntegerDecompressor.cpp  PINDecompressors.cpp  SimpleDecompressor.cpp
examples/: QuerySubmitter.cpp
include/: Decompressor.hpp  HS2Client.hpp  PINDecompressors.hpp  TCLIService_types.h
